--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="hello_home_fragment">Hello Home fragment</string>
     <string name="hello_not_fragment">Hello Notification fragment</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_fragments">FragmentsActivity</string>
+
 </resources>
